# tensorboa.rs

./: Cargo.toml  build.rs  justfile  pyproject.toml  requirements.dev.txt
.benchmarks/Darwin-CPython-3.8-64bit/: 0001_sequential.json  0002_parallel.json
.github/workflows/: CI.yml  RELEASE.yml
data/: events.out.tfevents.1661684667.applepie4
hooks/: pre-commit
python/tensorboars/: __init__.py
python/tests/: conftest.py  test_benchmark.py  test_correctness.py  test_tensorboars.py  testdata_setup.py  utils.py
src/: io.rs  lib.rs  proto.rs  record_reader.rs  summary_parser.rs
src/proto/: event.proto  resource_handle.proto  summary.proto  tensor.proto  tensor_shape.proto  types.proto
