[package]
name = "tensorboars"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tensorboars"
crate-type = ["cdylib"]

[dependencies]
byteorder = "1.4.3"
crc32c = "0.6.3"
prost = "0.11.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[build-dependencies]
prost-build = "0.11.1"
protobuf-src = "1.1.0"
protoc-bin-vendored = "3.0.0"
