[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "tensorboars"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"

[tool.pyright]

[tool.pytest.ini-options]
minversion = "6.0"
testpaths = [
    "python/tests"
]
addopts = "-s"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring"
]