[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "tensorboars"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
python-source = "python"

[tool.pyright]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "python/tests"
]
addopts = "-m \"not dev\" --strict-markers"
markers = [
    "dev"
]
filterwarnings = [
   "ignore:ANTIALIAS is deprecated*:DeprecationWarning",
   "ignore::DeprecationWarning:tensorboardX.*"
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "fixme"
]

[tool.isort]
py_version=310